# auto-quantize-model

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  setup-envs.sh
.codex/: config.toml  history.jsonl
.github/: README.md
.github/workflows/: README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
conf/: config.yaml  qwen3_lm_sensitivity.yaml
conf/autoquant/: gradient_default.yaml
conf/dataset/: coco2017.yaml  quantize_calib_yolo11n.yaml  vlm_coco2017_captions.yaml
conf/hardware/: multi_gpu_8x3090.yaml  single_gpu.yaml
conf/inference_runtime/: onnxruntime.yaml
conf/output_layout/: publish.yaml  tmp.yaml
conf/preset/: qwen3_lm_sensitivity.yaml
conf/quant_granularity/: a_per_tensor_static.yaml  a_per_token_dynamic.yaml  default.yaml  recipe_match_channel_token.yaml  w_group128.yaml  w_group64.yaml  w_per_in_channel.yaml  w_per_out_channel.yaml  w_per_tensor.yaml
conf/quant_pair/: wfp4_afp16.yaml  wfp4_afp8.yaml  wfp4_aint4.yaml  wfp4_aint8.yaml  wfp8_afp16.yaml  wfp8_afp8.yaml  wfp8_aint4.yaml  wfp8_aint8.yaml  wint4_afp16.yaml  wint4_afp8.yaml  wint4_aint4.yaml  wint4_aint8.yaml  wint8_afp16.yaml  wint8_afp8.yaml  wint8_aint4.yaml  wint8_aint8.yaml  wint8_aint8_lm_only.yaml
context/: README.md
context/design/: README.md  goal-of-int4-int8-quantization-of-yolo10m.md  models-to-test.md  qwen3-modelopt-production-options.md  qwen3-target-recipe.md
context/hints/: README.md  about-automatic-mixed-precision-quantization-tools.md  about-brevitas-yolo-w4a8-w4a16-onnx-nvidia-gpu.md  about-comparing-fp16-and-quantized-onnx-models.md  about-edge-npu-object-detection-and-segmentation-models.md  about-evaluating-quantized-llms-without-full-benchmarks.md  about-finn-quantized-yolo-qat-vs-our-brevitas-yolov10.md  about-hawq-for-llm-quantization.md  about-int4-quantization-of-yolo-model.md  about-major-auto-quantization-algorithms-in-vendor-frameworks.md  about-modelopt-mixed-precision-search.md  about-modelopt-quantization-granularity.md  howto-build-vllm-from-source-cuda124.md  howto-export-qwen2_5_vl-to-onnx-for-layer-sensitivity.md  howto-install-cuda-build-deps-with-pixi.md  howto-modelopt-layer-wise-quant-bits.md  howto-print-onnx-model-graph-in-text-format.md  howto-run-vllm-and-pytorch-on-rtx5090.md  info-facebook-pretrained-models.md
context/instructions/: README.md  prep-cu128.md  prep-rtx5090-inc.md  prep-rtx5090-trtllm.md  prep-rtx5090-vllm.md  prep-rtx5090.md
context/issues/: README.md  bugfix-pytorch-onnx-export-qwen2_5_vl-text-lm.md  issue-build-vllm-with-pixi-cuda-12_4.md  issue-qwen2_5_vl-modelopt-vllm-rtx5090.md
context/logs/: README.md
context/plans/: README.md  plan-add-hydra-quantization-granularity-control.md  plan-inc-op-sensitivity-qwen2_5-vl-3b-w8a8-spectrum.md  plan-int8-per-layer-sensitivity-qwen-vl.md  plan-modelopt-autoquant-fp8-qwen2_5-vl-mixed-schemes.md  plan-quantize-qwen2_5-vl-3b-w8a8-modelopt.md  plan-quantize-yolov10m-low-bit-sensitivity.md  plan-quantize-yolov10m-w4a8-w4a16-brevitas.md  plan-qwen2_5-vl-onnx-text-plus-preembedded-image.md  plan-qwen3-vl-lm-only-per-layer-sensitivity-hydra.md  plan-rtx5090-tensorrt-inference.md  plan-train-yolov10m-from-scratch-w4a16-qat-brevitas.md  plan-yolo10-layer-sensitivity-sweep.md  plan-yolo11n-trt-coco-eval.md  plan-yolov10m-w4a16-qat-ema-qc.md
context/refcode/: README.md
context/roles/: README.md
context/rules/: README.md
context/summaries/: README.md  quantization-sensitivity-analysis-research.md
context/tasks/: README.md  task-anything.md
context/tools/: README.md
custom-build/: .gitignore  README.md  bootstrap.sh
datasets/: .gitignore  README.md
datasets/coco2017/: README.md  bootstrap.sh  bootstrap.yaml
datasets/quantize-calib/: baseline_yolo11n_fp16_coco100.json  quant100.txt  yolo11n_int8_onnx_coco100_gpuCalib.json  yolo11n_int8_onnx_coco50.json  yolo11n_int8_scheme.json
datasets/vlm-quantize-calib/: README.md  coco2017_captions.txt  coco2017_captions_large.txt  coco2017_captions_medium.txt  coco2017_captions_small.txt  coco2017_vlm_calib.db  coco2017_vlm_calib_large.db  coco2017_vlm_calib_medium.db  coco2017_vlm_calib_small.db  coco2017_vlm_eval_100.jsonl
dockers/: README.md  copy-credentials.sh
dockers/dev/: build-merged.sh  docker-compose.yml  merged.env  run-merged.sh  user_config.persist.yml  user_config.yml
dockers/dev-5090/: docker-compose.yml  merged.env  user_config.rtx5090.yml  user_config.yml
dockers/dev-5090-trtllm/: .env.example  docker-compose.yml  merged.env  run-merged.sh  user_config.rtx5090.yml
dockers/dev-trtllm/: build-merged.sh  docker-compose.yml  merged.env  user_config.gpu.yml  user_config.yml
dockers/trt-simple/: Dockerfile  docker-compose.yml  todo.md
docs/: README.md  index.md
docs/reference/: qwen3-lm-sensitivity-config.md
docs/workflows/: layer-sensitivity-hydra.md  qwen3-vl-lm-only-sensitivity.md  yolov10m-low-bit-sensitivity.md
models/: README.md
models/qwen2_5_vl_3b_instruct/: .gitignore  README.md  boostrap.yaml  bootstrap.sh
models/qwen3_vl_4b_instruct/: .gitignore  README.md  boostrap.yaml  bootstrap.sh
models/yolo10/: .gitignore  README.md  boostrap.yaml  bootstrap.sh
models/yolo11/: .gitignore  README.md  boostrap.yaml  bootstrap.sh
scripts/: README.md  build_vlm_quantize_calib_coco2017_db.py  download_vl_calib_datasets.sh
scripts/cv-models/: collect_training_stats_sqlite.py  eval_yolov10m_onnx_coco.py  make_yolov10m_calib_npy.py  make_yolov10m_candidate_schemes.py  make_yolov10m_head_nodes_to_exclude.py  materialize_yolov10m_lowbit_candidates.sh  plot_training_stats_from_sqlite.py  quantize_yolov10m_brevitas_w4.py  quantize_yolov10m_fp8_onnx.sh  quantize_yolov10m_int4_onnx.sh  quantize_yolov10m_int8_onnx.sh  run_yolov10_w4a16_qat_validation.py  run_yolov10m_brevitas_w4_ptq_qat.sh  run_yolov10m_layer_sensitivity_sweep.sh  run_yolov10m_scratch_fp16_vs_w4a16_qat.sh  smoke_brevitas_qcdq_export.py  summarize_yolov10_w4a16_qat_validation.py  train_yolov10m_scratch_fp16_vs_w4a16_qat_brevitas.py  (+2 more)
tests/: README.md
(+472 files in other folders)
